# ha-cem-monitoring-integration

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v0.6.0.md  hacs.json  mypy.ini  pyproject.toml  pytest.ini  requirements-test.txt  ruff.toml  update_release.py  update_release.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-check.yml  tests.yml
custom_components/cem_monitor/: __init__.py  api.py  cache.py  cemapi.py  config_flow.py  const.py  coordinator.py  counter_reading_coordinator.py  counters_coordinator.py  discovery.py  manifest.json  meter_counters_coordinator.py  meters_coordinator.py  object_counters_coordinator.py  objects_coordinator.py  retry.py  sensor.py  services.yaml  strings.json  userinfo_coordinator.py  utils.py  water_coordinator.py
custom_components/cem_monitor/coordinators/: __init__.py  base.py  counter_reading.py  meter_counters.py  meters.py  objects.py  userinfo.py
custom_components/cem_monitor/translations/: en.json
custom_components/cem_monitor/utils/: __init__.py  discovery.py  retry.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  PROJECT_REVIEW.md
tests/: __init__.py  conftest.py  test_api.py  test_batch_refresh.py  test_cache.py  test_config_flow.py  test_coordinators.py  test_integration.py  test_object_name_resolution.py  test_retry.py
tests/coordinators/: __init__.py  test_batch_refresh.py  test_coordinators.py  test_object_name_resolution.py
tests/integration/: __init__.py  test_config_flow.py  test_integration.py
tests/unit/: __init__.py  test_api.py  test_cache.py  test_retry.py
